--- a/LeaveManagement.Web/appsettings.json
+++ b/LeaveManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagement.Web-e1ccb6bc-e947-4538-8218-38f85d1b508b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\sqlexpress;Database=LeaveManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
